trying to fix overflow and positiing of the retro_computer

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,10 @@
   --background: #ffffff;
   --foreground: #171717;
 }
+/* 
+*{
+  outline: 1px solid red  ;
+} */
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -14,11 +18,8 @@
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
+ body {
   font-family: Arial, Helvetica, sans-serif;
-  overflow-x: hidden;
 }
 
 @layer utilities {
